--- a/indexf.html
+++ b/indexf.html
@@ -28,8 +28,8 @@
 
     const gravity = 0.3;
     const jumpStrength = -8;
-    const pipeGap = 200;
-    const pipeWidth = .1*width;
+    const pipeGap = 175;
+    const pipeWidth = 75;
     const pipeSpeed = 2;
     let score = 0;
 
