--- a/indexf.html
+++ b/indexf.html
@@ -23,7 +23,7 @@
         y: canvas.height / 2,
         radius: 20,
         velocityY: 0,
-        gravity: 1
+        gravity: .75
     };
 
     const gravity = 0.3;
